compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__guard_int_float_eq_vars.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 529
expression: "let x = 1 let y = 1.0 case x { _ if x == y -> 1 }"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:1:37
  │
1 │ let x = 1 let y = 1.0 case x { _ if x == y -> 1 }
  │                                     ^^^^^^

Expected type:

    Int

Found type:

    Float


